option optimize_for = SPEED;
option java_package = "steam.enums";
option java_multiple_files = true;

enum EPublishedFileQueryType {
	k_PublishedFileQueryType_RankedByVote = 0;
	k_PublishedFileQueryType_RankedByPublicationDate = 1;
	k_PublishedFileQueryType_AcceptedForGameRankedByAcceptanceDate = 2;
	k_PublishedFileQueryType_RankedByTrend = 3;
	k_PublishedFileQueryType_FavoritedByFriendsRankedByPublicationDate = 4;
	k_PublishedFileQueryType_CreatedByFriendsRankedByPublicationDate = 5;
	k_PublishedFileQueryType_RankedByNumTimesReported = 6;
	k_PublishedFileQueryType_CreatedByFollowedUsersRankedByPublicationDate = 7;
	k_PublishedFileQueryType_NotYetRated = 8;
	k_PublishedFileQueryType_RankedByTotalUniqueSubscriptions = 9;
	k_PublishedFileQueryType_RankedByTotalVotesAsc = 10;
	k_PublishedFileQueryType_RankedByVotesUp = 11;
	k_PublishedFileQueryType_RankedByTextSearch = 12;
	k_PublishedFileQueryType_RankedByPlaytimeTrend = 13;
	k_PublishedFileQueryType_RankedByTotalPlaytime = 14;
	k_PublishedFileQueryType_RankedByAveragePlaytimeTrend = 15;
	k_PublishedFileQueryType_RankedByLifetimeAveragePlaytime = 16;
	k_PublishedFileQueryType_RankedByPlaytimeSessionsTrend = 17;
	k_PublishedFileQueryType_RankedByLifetimePlaytimeSessions = 18;
	k_PublishedFileQueryType_RankedByInappropriateContentRating = 19;
	k_PublishedFileQueryType_RankedByBanContentCheck = 20;
	k_PublishedFileQueryType_RankedByLastUpdatedDate = 21;
}

enum EPublishedFileInappropriateProvider {
	k_EPublishedFileInappropriateProvider_Invalid = 0;
	k_EPublishedFileInappropriateProvider_Google = 1;
	k_EPublishedFileInappropriateProvider_Amazon = 2;
}

enum EPublishedFileInappropriateResult {
	k_EPublishedFileInappropriateResult_NotScanned = 0;
	k_EPublishedFileInappropriateResult_VeryUnlikely = 1;
	k_EPublishedFileInappropriateResult_Unlikely = 30;
	k_EPublishedFileInappropriateResult_Possible = 50;
	k_EPublishedFileInappropriateResult_Likely = 75;
	k_EPublishedFileInappropriateResult_VeryLikely = 100;
}

enum EPersonaStateFlag {
	k_EPersonaStateFlag_HasRichPresence = 1;
	k_EPersonaStateFlag_InJoinableGame = 2;
	k_EPersonaStateFlag_Golden = 4;
	k_EPersonaStateFlag_RemotePlayTogether = 8;
	k_EPersonaStateFlag_ClientTypeWeb = 256;
	k_EPersonaStateFlag_ClientTypeMobile = 512;
	k_EPersonaStateFlag_ClientTypeTenfoot = 1024;
	k_EPersonaStateFlag_ClientTypeVR = 2048;
	k_EPersonaStateFlag_LaunchTypeGamepad = 4096;
	k_EPersonaStateFlag_LaunchTypeCompatTool = 8192;
}

enum EContentCheckProvider {
	k_EContentCheckProvider_Invalid = 0;
	k_EContentCheckProvider_Google_DEPRECATED = 1;
	k_EContentCheckProvider_Amazon = 2;
	k_EContentCheckProvider_Local = 3;
	k_EContentCheckProvider_GoogleVertexAI = 4;
}

enum EProfileCustomizationType {
	k_EProfileCustomizationTypeInvalid = 0;
	k_EProfileCustomizationTypeRareAchievementShowcase = 1;
	k_EProfileCustomizationTypeGameCollector = 2;
	k_EProfileCustomizationTypeItemShowcase = 3;
	k_EProfileCustomizationTypeTradeShowcase = 4;
	k_EProfileCustomizationTypeBadges = 5;
	k_EProfileCustomizationTypeFavoriteGame = 6;
	k_EProfileCustomizationTypeScreenshotShowcase = 7;
	k_EProfileCustomizationTypeCustomText = 8;
	k_EProfileCustomizationTypeFavoriteGroup = 9;
	k_EProfileCustomizationTypeRecommendation = 10;
	k_EProfileCustomizationTypeWorkshopItem = 11;
	k_EProfileCustomizationTypeMyWorkshop = 12;
	k_EProfileCustomizationTypeArtworkShowcase = 13;
	k_EProfileCustomizationTypeVideoShowcase = 14;
	k_EProfileCustomizationTypeGuides = 15;
	k_EProfileCustomizationTypeMyGuides = 16;
	k_EProfileCustomizationTypeAchievements = 17;
	k_EProfileCustomizationTypeGreenlight = 18;
	k_EProfileCustomizationTypeMyGreenlight = 19;
	k_EProfileCustomizationTypeSalien = 20;
	k_EProfileCustomizationTypeLoyaltyRewardReactions = 21;
	k_EProfileCustomizationTypeSingleArtworkShowcase = 22;
	k_EProfileCustomizationTypeAchievementsCompletionist = 23;
	k_EProfileCustomizationTypeReplay = 24;
}

enum EPublishedFileStorageSystem {
	k_EPublishedFileStorageSystemInvalid = 0;
	k_EPublishedFileStorageSystemLegacyCloud = 1;
	k_EPublishedFileStorageSystemDepot = 2;
	k_EPublishedFileStorageSystemUGCCloud = 3;
}

enum ECloudStoragePersistState {
	k_ECloudStoragePersistStatePersisted = 0;
	k_ECloudStoragePersistStateForgotten = 1;
	k_ECloudStoragePersistStateDeleted = 2;
}

enum ESteamDeckCompatibilityCategory {
	k_ESteamDeckCompatibilityCategory_Unknown = 0;
	k_ESteamDeckCompatibilityCategory_Unsupported = 1;
	k_ESteamDeckCompatibilityCategory_Playable = 2;
	k_ESteamDeckCompatibilityCategory_Verified = 3;
}

enum ESteamDeckCompatibilityResultDisplayType {
	k_ESteamDeckCompatibilityResultDisplayType_Invisible = 0;
	k_ESteamDeckCompatibilityResultDisplayType_Informational = 1;
	k_ESteamDeckCompatibilityResultDisplayType_Unsupported = 2;
	k_ESteamDeckCompatibilityResultDisplayType_Playable = 3;
	k_ESteamDeckCompatibilityResultDisplayType_Verified = 4;
}

enum ECommunityItemClass {
	k_ECommunityItemClass_Invalid = 0;
	k_ECommunityItemClass_Badge = 1;
	k_ECommunityItemClass_GameCard = 2;
	k_ECommunityItemClass_ProfileBackground = 3;
	k_ECommunityItemClass_Emoticon = 4;
	k_ECommunityItemClass_BoosterPack = 5;
	k_ECommunityItemClass_Consumable = 6;
	k_ECommunityItemClass_GameGoo = 7;
	k_ECommunityItemClass_ProfileModifier = 8;
	k_ECommunityItemClass_Scene = 9;
	k_ECommunityItemClass_SalienItem = 10;
	k_ECommunityItemClass_Sticker = 11;
	k_ECommunityItemClass_ChatEffect = 12;
	k_ECommunityItemClass_MiniProfileBackground = 13;
	k_ECommunityItemClass_AvatarFrame = 14;
	k_ECommunityItemClass_AnimatedAvatar = 15;
	k_ECommunityItemClass_SteamDeckKeyboardSkin = 16;
	k_ECommunityItemClass_SteamDeckStartupMovie = 17;
}

enum ESteamDeckCompatibilityFeedback {
	k_ESteamDeckCompatibilityFeedback_Unset = 0;
	k_ESteamDeckCompatibilityFeedback_Agree = 1;
	k_ESteamDeckCompatibilityFeedback_Disagree = 2;
	k_ESteamDeckCompatibilityFeedback_Ignore = 3;
}

enum EProvideDeckFeedbackPreference {
	k_EProvideDeckFeedbackPreference_Unset = 0;
	k_EProvideDeckFeedbackPreference_Yes = 1;
	k_EProvideDeckFeedbackPreference_No = 2;
}

enum ESessionPersistence {
	k_ESessionPersistence_Invalid = -1;
	k_ESessionPersistence_Ephemeral = 0;
	k_ESessionPersistence_Persistent = 1;
}

enum ENewSteamAnnouncementState {
	k_ENewSteamAnnouncementState_Invalid = 0;
	k_ENewSteamAnnouncementState_AllRead = 1;
	k_ENewSteamAnnouncementState_NewAnnouncement = 2;
	k_ENewSteamAnnouncementState_FeaturedAnnouncement = 3;
}

enum ECommentThreadType {
	k_ECommentThreadTypeInvalid = 0;
	k_ECommentThreadTypeScreenshot_Deprecated = 1;
	k_ECommentThreadTypeWorkshopAccount_Developer = 2;
	k_ECommentThreadTypeWorkshopAccount_Public = 3;
	k_ECommentThreadTypePublishedFile_Developer = 4;
	k_ECommentThreadTypePublishedFile_Public = 5;
	k_ECommentThreadTypeTest = 6;
	k_ECommentThreadTypeForumTopic = 7;
	k_ECommentThreadTypeRecommendation = 8;
	k_ECommentThreadTypeVideo_Deprecated = 9;
	k_ECommentThreadTypeProfile = 10;
	k_ECommentThreadTypeNewsPost = 11;
	k_ECommentThreadTypeClan = 12;
	k_ECommentThreadTypeClanAnnouncement = 13;
	k_ECommentThreadTypeClanEvent = 14;
	k_ECommentThreadTypeUserStatusPublished = 15;
	k_ECommentThreadTypeUserReceivedNewGame = 16;
	k_ECommentThreadTypePublishedFile_Announcement = 17;
	k_ECommentThreadTypeModeratorMessage = 18;
	k_ECommentThreadTypeClanCuratedApp = 19;
	k_ECommentThreadTypeQAndASession = 20;
	k_ECommentThreadTypeMax = 21;
}

enum EBroadcastPermission {
	k_EBroadcastPermissionDisabled = 0;
	k_EBroadcastPermissionFriendsApprove = 1;
	k_EBroadcastPermissionFriendsAllowed = 2;
	k_EBroadcastPermissionPublic = 3;
	k_EBroadcastPermissionSubscribers = 4;
}

enum EBroadcastEncoderSetting {
	k_EBroadcastEncoderBestQuality = 0;
	k_EBroadcastEncoderBestPerformance = 1;
}

enum ECloudGamingPlatform {
	k_ECloudGamingPlatformNone = 0;
	k_ECloudGamingPlatformValve = 1;
	k_ECloudGamingPlatformNVIDIA = 2;
}
